# tree-sitter-nginx

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: release.yaml
bindings/c/: tree-sitter-nginx.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_nginx/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterNginx/: nginx.h
bindings/swift/TreeSitterNginxTests/: TreeSitterNginxTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/: conf.nginx  nginx.conf
test/corpus/: base.txt  github.txt  medium.txt  pieces.txt
