[package]
name = "tree-sitter-nginx"
description = "Grammar for NGinx config"
version = "1.0.1"
authors = ["Vladimir <opa_oz> Levin <opaozhub@protonmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "nginx"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/opa-oz/tree-sitter-nginx"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
