[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-nginx"
description = "Grammar for NGinx config"
version = "1.0.1"
keywords = ["incremental", "parsing", "tree-sitter", "nginx"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Vladimir <opa_oz> Levin", email = "opaozhub@protonmail.com" }]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/opa-oz/tree-sitter-nginx"
Funding = "https://ko-fi.com/opa_oz"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
